Only gif owners can add/remove keywords

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -2,3 +2,9 @@ html,
 body {
   font-family: "helvetica neue", helvetica, arial, sans-serif;
 }
+
+a {
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
+}
